# AQI

./: .env  .env.example  .gitignore  CNAME  README.md  SETUP.md
.github/workflows/: ci.yml  deploy.yml
backend/: Cargo.toml
backend/src/: main.rs
backend/src/test/: handlers.rs  mod.rs
backend/src/testing/: validation.rs
frontend/: Cargo.toml  Trunk.toml  index.html  manifest.json  style.css  sw.js
frontend/src/: api.rs  app.css  app_responsive.css  lib.rs
frontend/src/components/: aqi_card.css  aqi_card.rs  favorites.css  favorites.rs  forecast.css  forecast.rs  mod.rs  pollutants.css  pollutants.rs  search.css  search.rs
frontend/src/test/: api.rs  mod.rs  sharing.rs
