[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# Trunk requires a cdylib target to produce WASM.
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Leptos in CSR (client-side rendering) mode — everything runs in the browser.
leptos = { version = "0.7", features = ["csr"] }

# Async bridge: turns JS Promises into Rust Futures and vice-versa.
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

# JS/DOM bindings we need: Window, Navigator, Geolocation, etc.
web-sys = { version = "0.3", features = [
    "Window",
    "Navigator",
    "Geolocation",
    "Position",
    "Coordinates",
    "PositionError",
    "PositionOptions",
    "console",
] }

# Higher-level WASM helpers (setTimeout, spawn_local, etc.)
gloo-timers = { version = "0.3", features = ["futures"] }

# HTTP client for the browser (wraps the Fetch API).
gloo-net = { version = "0.6", features = ["http"] }

# JS primitive types (Array, Promise, …)
js-sys = "0.3"

# Serialisation — shared with the API response types.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
console_error_panic_hook = "0.1"
